<resources>
    <string name="app_name">FarmTraders</string>
    <string name="warning_check_server_again">Could not connect to server. Please try again!</string>
    <string name="error_system_msg">An error has occurred</string>
    <string name="error_internet_connect">No Internet Connection!</string>
    <string name="check_double_click_exit_app">Please click BACK again to exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_title">Error</string>
    <string name="msg_update_app">Hiện nay đang có phiên bản mới. Cập nhật để sử dụng tốt hơn.</string>
    <string name="msg_need_permission">Permissions are need for application.</string>
    <string name="mgs_open_location">"Ứng dụng cần phải bật định vị. Bạn có muốn bật không?"</string>
    <string name="title_update_app">"Thông báo cập nhật"</string>
    <string name="text_force_login_user_not_support">Tài khoản này hiện chưa được hỗ trợ, vui lòng đăng nhập bằng tài khoản khác</string>
    <string name="title_error_login">Login fail</string>

    <string name="ACTION_CLOSE">Đóng</string>
    <string name="ACTION_UPDATE">Cập nhật</string>
    <string name="ACTION_SKIP">Bỏ qua</string>
    <string name="ACTION_WANT">Muốn</string>
    <string name="ACTION_RETRY">Thử lại</string>
    <string name="ACTION_CANCEL">Hủy</string>
    <string name="ACTION_NO">Không</string>
    <string name="ACTION_YES">Có</string>
    <string name="ACTION_OK">Đồng ý</string>
    <string name="mgs_layout_empty">Tính năng đang cập nhật</string>

    <!--For app-->
    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_maplayer">Lớp bản đồ</string>
    <string name="action_search">Tìm kiếm</string>


    <string name="title_logo">Ứng Dụng Trao đổi - Mua bán giữa Thương Lái và Nông Dân</string>
    <string name="title_so_khoa_hoc">SỞ KHOA HỌC VÀ CÔNG NGHỆ TRÀ VINH</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_username">Tài khoản</string>
    <string name="helper_username">Nhập tên tài khoản của bạn</string>
    <string name="helper_password">Nhập mật khẩu của bạn</string>
    <string name="button_forget_password">Quên mật khẩu?</string>
    <string name="button_login">Đăng Nhập</string>
    <string name="msg_text_empty">Không được để trống</string>
    <string name="tab_medical">Trạm Y Tế</string>
    <string name="tab_gasoline">Trạm Xăng</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="company">Doanh nghiệp</string>
    <string name="gasoline">Trạm Xăng</string>
    <string name="medical">Trạm Y Tế</string>
    <string name="district">Quận/Huyện</string>
    <string name="ward">Phường/Xã</string>
    <string name="system">Hệ Thống</string>
    <string name="logout">Đăng Xuất</string>
    <string name="news">Tin tức</string>
    <string name="geometry">ĐỊA LÝ</string>
    <string name="manager">QUẢN LÝ</string>
    <string name="account">Tài khoản</string>
    <string name="tab_contact">Liên hệ</string>
    <string name="tab_map">Bản đồ</string>
    <string name="tab_device">Thiết bị</string>
    <string name="tab_inspect">Thanh tra</string>
    <string name="about">Liên hệ</string>
    <string name="statistical">Thống kê</string>

    <string name="text_dialog_logout">Bạn có muốn đăng xuất không?</string>
    <string name="title_list">Danh Sách</string>

    <string name="phone_number">Điện Thoại</string>

    <string name="editText_phone">SĐT</string>
    <string name="have_not_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up_now"><u>Đăng kí ngay</u></string>
    <string name="sign_up_title">Đăng ký</string>
    <string name="verification_phone">Xác minh số điện thoại</string>
    <string name="btnverification">Xác nhận</string>
    <string name="msg_repassword_not_match">Mật khẩu không trùng nhau, Vui lòng nhập lại!</string>
    <string name="font_fontFamily_medium" translatable="false">sans-serif</string>
    <string name="tab_price_products_today">Giá trong ngày</string>
    <string name="tab_products">Nông sản</string>
    <string name="store_owner">Chủ Cửa Hàng</string>
    <string name="tab_accreditation">Kiểm định</string>
    <string name="title_degree">Bằng cấp</string>
    <string name="title_owner">Chủ</string>
    <string name="title_specialist">Chuyên khoa</string>
    <string name="company_address">Địa chỉ doanh nghiệp</string>
    <string name="company_name">Tên doanh nghiệp</string>
    <string name="company_owner">Chủ doanh nghiệp</string>
    <string name="product_list">Danh sách nông sản</string>
    <string name="title_product_detail">Chi tiết nông sản</string>
    <string name="list_price_rate">Danh sách nông sản Trong Ngày</string>


</resources>
