<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/gasContact"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/title_owner"
            android:textColor="@color/color_blue_448ccb"
            android:textSize="@dimen/dialog_message_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvMedicalDetailOwner"
            android:layout_width="match_parent"
            android:text="Trương Công Bình"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/suggestion_body_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:text="@string/hint_address"
            android:textColor="@color/color_blue_448ccb"
            android:textSize="@dimen/dialog_message_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvMedicalDetailAddress"
            android:layout_width="match_parent"
            android:text="Khóm 5, Càng Long, Càng Long"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/suggestion_body_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:text="@string/phone_number"
            android:textColor="@color/color_blue_448ccb"
            android:textSize="@dimen/dialog_message_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvMedicalDetailPhone"
            android:layout_width="match_parent"
            android:text="36556699"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/suggestion_body_text_size"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:text="@string/title_degree"
            android:textColor="@color/color_blue_448ccb"
            android:textSize="@dimen/dialog_message_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvMedicalDetailDegree"
            android:layout_width="match_parent"
            android:text="Ths, BS Chuyên khoa chấn thương chỉnh hình"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/suggestion_body_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:text="@string/title_specialist"
            android:textColor="@color/color_blue_448ccb"
            android:textSize="@dimen/dialog_message_text_size"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvMedicalDetailSpecialist"
            android:layout_width="match_parent"
            android:text=""
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/suggestion_body_text_size"
            android:layout_height="wrap_content"/>

</LinearLayout>