<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">
            <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing"
                    android:layout_width="match_parent"
                    android:background="@color/design_default_color_primary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:textSize="@dimen/spacing_medium"
                    app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                    app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                    android:layout_height="@dimen/nav_header_height_supper_xxx">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent">

                    <ViewFlipper
                            android:id="@+id/vlGasolineStore"
                            app:layout_collapseMode="parallax"
                            android:src="@drawable/ima_gas_store"
                            android:layout_width="fill_parent"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:layout_height="@dimen/nav_header_height_supper"/>

                    <LinearLayout
                            android:id="@+id/llstoreName"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/tvStoreName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="DNTN Ngân Thịnh"
                                android:textColor="@color/white"
                                android:textSize="21sp" />

                        <TextView
                                android:id="@+id/tvStoreType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="Doanh Nghiệp"
                                android:textColor="@color/white_four"
                                android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbarGasStoreDetail"
                        app:titleTextColor="@color/window_background"
                        app:layout_collapseMode="pin"
                        android:theme="@style/ToolbarTheme"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.CollapsingToolbarLayout>
            <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:tabGravity="center"
                    app:tabIndicatorColor="#F1514A"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="#F1514A">

                <android.support.design.widget.TabItem
                        android:id="@+id/tabContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_contact"/>

                <android.support.design.widget.TabItem
                        android:id="@+id/tabAccreditation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_accreditation"/>

                <android.support.design.widget.TabItem
                        android:id="@+id/tabMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_map"/>

                <android.support.design.widget.TabItem
                        android:id="@+id/tabDevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_device"/>

                <android.support.design.widget.TabItem
                        android:id="@+id/tabInspect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_inspect"/>
            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">
        <FrameLayout
                android:id="@+id/vgContentGasDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>





    <android.support.design.widget.FloatingActionButton
            android:id="@+id/faCamera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_camera"
            app:backgroundTint="#F1514A"
            app:borderWidth="0dp"
            app:elevation="8dp"
            app:layout_anchor="@id/llstoreName"
            app:layout_anchorGravity="top|right|end" />
</android.support.design.widget.CoordinatorLayout>